# embed_aura

./: .gitignore  Dockerfile  HYPOTHESIS_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  InitialPrompt.md  LEARNING_IMPLEMENTATION_COMPLETE.md  LEARNING_LOOP.md  MULTIMODAL_GUIDE.md  MULTIMODAL_SUMMARY.md  Makefile  OLLAMA_GUIDE.md  OLLAMA_IMAGE_EMBEDDINGS.md  OLLAMA_SETUP_COMPLETE.md  OPTIMIZATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VLLM_GUIDE.md  VLLM_SETUP_COMPLETE.md  docker-compose.yml  example_ollama_usage.py  example_vllm_usage.py  migrate_embeddings.py  pyproject.toml  setup_ollama.sh  setup_vllm.sh  start_ollama.sh  start_vllm.sh  test_learning_loop.py
WinUI/: .gitignore  BUILD_INSTRUCTIONS.md  QUICKSTART.md  README.md  build_exe.bat  create_shortcut.bat  create_shortcut.ps1  idea  nipping tool with smart suggestions and history  requirements.txt  snip_tool.py
app/: __init__.py  config.py  main.py  models.py
app/clients/: __init__.py
app/clients/slm/: __init__.py  base.py  http.py  local.py  ollama.py  openai.py  vllm.py
app/memory/: __init__.py  base.py  local.py  mem0.py  supermemory.py
app/services/: __init__.py  context_budgeter.py  hypothesizer.py  persona.py  prompt_builder.py  ranking.py  safety.py  telemetry.py  training.py
app/utils/: embeddings.py  tokens.py
local-models/: README.md
tests/: __init__.py  conftest.py  test_budgeter.py  test_endpoints.py  test_persona.py  test_ranking.py
